[package]
name = "wget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["default"] }
tokio = { version = "1", features = ["full"] }
regex = "1.4.5"
indicatif = "0.16.2"
chrono = "0.4.19"
url = "2.2.2"
futures = "0.3.15"
scraper = "0.12"
structopt = "0.3"